--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "compression": "1.6.1",
     "express": "4.13.4",
     "node-fetch": "^1.5.3",
+    "node-uuid": "^1.4.7",
     "pug": "^2.0.0-alpha8",
     "query-string": "^4.2.1",
     "react": "15.0.2",
