--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "react-select": "^0.9.1",
     "redux": "3.5.2",
     "redux-localstorage": "^0.4.1",
-    "redux-thunk": "2.0.1"
-  },
-  "devDependencies": {
+    "redux-thunk": "2.0.1",
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
     "babel-loader": "6.2.4",
