--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "npm run serve",
     "serve": "NODE_ENV=development babel-node ./src/server.js",
+    "serve:prod": "NODE_ENV=development node ./dist/server.js",
     "build": "NODE_ENV=production webpack --config ./tools/webpack/webpack.config.js",
     "clean": "rimraf dist"
   },
