--- a/package.json
+++ b/package.json
@@ -13,32 +13,16 @@
   "author": "Jori Regter",
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "6.8.0",
-    "bcrypt": "^0.8.7",
-    "compression": "1.6.1",
-    "express": "4.13.4",
-    "jsonwebtoken": "^7.1.9",
-    "mongoose": "^4.5.9",
-    "node-fetch": "^1.5.3",
-    "node-uuid": "^1.4.7",
-    "pug": "^2.0.0-alpha8",
-    "query-string": "^4.2.1",
-    "react": "15.0.2",
-    "react-dom": "15.0.2",
-    "react-redux": "4.4.5",
-    "react-router": "2.4.0",
-    "react-router-redux": "4.0.4",
-    "react-select": "^0.9.1",
-    "redux": "3.5.2",
-    "redux-localstorage": "^0.4.1",
-    "redux-thunk": "2.0.1",
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
     "babel-loader": "6.2.4",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-polyfill": "6.8.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-register": "6.8.0",
+    "bcrypt": "^0.8.7",
+    "compression": "1.6.1",
     "copy-webpack-plugin": "^3.0.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.11.0",
@@ -46,10 +30,27 @@
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "^5.1.1",
+    "express": "4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "jsonwebtoken": "^7.1.9",
+    "mongoose": "^4.5.9",
+    "node-fetch": "^1.5.3",
     "node-sass": "^3.7.0",
+    "node-uuid": "^1.4.7",
+    "pug": "^2.0.0-alpha8",
+    "query-string": "^4.2.1",
+    "react": "15.0.2",
+    "react-dom": "15.0.2",
     "react-hot-loader": "^1.3.0",
+    "react-loader": "^2.4.0",
+    "react-redux": "4.4.5",
+    "react-router": "2.4.0",
+    "react-router-redux": "4.0.4",
+    "react-select": "^0.9.1",
+    "redux": "3.5.2",
     "redux-immutable-state-invariant": "1.2.3",
+    "redux-localstorage": "^0.4.1",
+    "redux-thunk": "2.0.1",
     "rimraf": "^2.5.2",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
