--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/jdreg95/deckbuildr"
+  },
+  "devDependencies": {
+    "react-lazy-load": "^3.0.10"
   }
 }
